# aiidalab-environ

./: main.ipynb  setup.cfg  start.py
aiidalab_environ/: input.py
