[metadata]
name = test1
version = 0.0.1
description = test
long_description = file: README.md
url = https://github.com/test/test
author = test 
author_email = test 
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/test/test
    Documentation = https://github.com/test/test/#readme
    Logo = https://5ba9a372-a-62cb3a1a-s-sites.googlegroups.com/site/olivieroandreussi/codes-and-plugins/environ1.png 
